--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {{define "content"}}
-<h1>Dreamblade Catalog</h1>
+<h1 class="title">Dreamblade Catalog</h1>
 <table>
     {{range .Sets}}
     <tr>
