Changed to pull user info from MongoDb

--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -14,7 +14,7 @@
                     <a href="/">Home</a>
                 </div>
                 <div class="level-item">
-                    {{if len .UserInfo.Username}}{{.UserInfo.Username}}{{else}}<a href="/login">Login</a>{{end}}
+                    {{if len .UserInfo.Username}}{{.UserInfo.Username}}{{else}}<a href="/login?username=user@dreamblade.com">Login</a>{{end}}
                 </div>
             </div>
         </div>
